--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/AttributesEditor.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/AttributesEditor.mustache
@@ -39,6 +39,6 @@
             <br>
         </div>
     {{/fields}}
-    <input class="save" type="button" value="Сохранить"/>
+    <input class="save" type="button" value="Сохранить атрибуты"/>
 </form>
 
