--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/templates/Display.html
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/templates/Display.html
@@ -108,15 +108,6 @@
 
                         <div data-dojo-type="dijit/ToolbarSeparator"></div>
 
-
-                        <div data-dojo-attach-point="removeFeatureButton"
-                             data-dojo-attach-event="onClick: removeFeature"
-                             data-dojo-type="dijit/form/Button"
-                             data-dojo-props="iconClass: 'removeFeature', showLabel: false, checked: true, title: 'Удалить выбранный объект'">
-                        </div>
-
-                        <div data-dojo-type="dijit/ToolbarSeparator"></div>
-
                         <div data-dojo-attach-point="infoNode"
                              style="display: inline-block; vertical-align: middle; float: right; padding: 0 4px;">
 
@@ -132,7 +123,10 @@
                             <span data-dojo-attach-point="scaleInfoNode"></span>
 
                         </div>
+
                     </div>
+
+                    <div data-dojo-type="ngw-compulink-editor/editor/EditorToolbar"></div>
 
                     <div data-dojo-attach-point="mapPane"
                          data-dojo-type="dijit/layout/ContentPane"
@@ -172,7 +166,8 @@
                              data-dojo-type="dijit/layout/ContentPane"
                              data-dojo-props="region: 'center'"
                              style="padding: 0">
-                            <div id="attributesEditor" class="empty" data-dojo-type="ngw-compulink-editor/editor/AttributesEditor"></div>
+                            <div id="attributesEditor" class="empty"
+                                 data-dojo-type="ngw-compulink-editor/editor/AttributesEditor"></div>
                         </div>
                     </div>
 
