#341 styles definitions were simplified

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/EditorToolbar.html
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/EditorToolbar.html
@@ -2,6 +2,7 @@
     <div data-dojo-type="dijit/Toolbar"
          data-dojo-props="region: 'top'"
          style="border-bottom: none"
+         id="editorToolbar"
          data-dojo-attach-point="mapToolbar2">
         <div data-dojo-attach-point="createVolsButton"
              data-dojo-attach-event="onChange: createVols"
