--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/css/EditorToolbar.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/css/EditorToolbar.css
@@ -1,29 +1,28 @@
-.removeFeature {
-    background: url('img/remove_feature.png') no-repeat;
+#editorToolbar span.dijitInline.dijitIcon {
     width: 16px;
     height: 16px;
     -webkit-background-size: cover; /* For WebKit*/
     -moz-background-size: cover; /* Mozilla*/
     -o-background-size: cover; /* Opera*/
     background-size: cover; /* Generic*/
+}
+
+.removeFeature {
+    background: url('img/remove_feature.png') no-repeat;
 }
 
 .iconCreateSp {
     background: url('img/create_sp.png') no-repeat;
-    width: 16px;
-    height: 16px;
-    -webkit-background-size: cover; /* For WebKit*/
-    -moz-background-size: cover; /* Mozilla*/
-    -o-background-size: cover; /* Opera*/
-    background-size: cover; /* Generic*/
 }
 
 .iconCreateVols {
     background: url('img/create_vols.png') no-repeat;
-    width: 16px;
-    height: 16px;
-    -webkit-background-size: cover; /* For WebKit*/
-    -moz-background-size: cover; /* Mozilla*/
-    -o-background-size: cover; /* Opera*/
-    background-size: cover; /* Generic*/
+}
+
+.iconCreateVols {
+    background: url('img/create_vols.png') no-repeat;
+}
+
+.iconCreateVols {
+    background: url('img/create_vols.png') no-repeat;
 }
