#341 styles definitions were clarified

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/css/EditorToolbar.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/css/EditorToolbar.css
@@ -7,22 +7,22 @@
     background-size: cover; /* Generic*/
 }
 
-.removeFeature {
+#editorToolbar span.removeFeature {
     background: url('img/remove_feature.png') no-repeat;
 }
 
-.iconCreateSp {
+#editorToolbar span.iconCreateSp {
     background: url('img/create_sp.png') no-repeat;
 }
 
-.iconCreateVols {
+#editorToolbar span.iconCreateVols {
     background: url('img/create_vols.png') no-repeat;
 }
 
-.iconCreateVols {
+#editorToolbar span.iconCreateVols {
     background: url('img/create_vols.png') no-repeat;
 }
 
-.iconCreateVols {
+#editorToolbar span.iconCreateVols {
     background: url('img/create_vols.png') no-repeat;
 }
