--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/css/EditorToolbar.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/css/EditorToolbar.css
@@ -34,3 +34,7 @@
 #editorToolbar span.undoAll {
     background: url('img/undo-all.png') no-repeat;
 }
+
+#editorToolbar span.updateLines {
+    background: url('img/update_line.png') no-repeat;
+}
