#346 correct name of updateLinesButton was set

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/EditorToolbar.html
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/EditorToolbar.html
@@ -18,7 +18,7 @@
              data-dojo-props="iconClass: 'iconCreateSp', showLabel: false, checked: false, title: 'Создать спецпереход'">
         </div>
 
-        <div data-dojo-attach-point="updateLines"
+        <div data-dojo-attach-point="updateLinesButton"
              data-dojo-attach-event="onClick: updateLines"
              data-dojo-type="dijit/form/Button"
              data-dojo-props="iconClass: 'updateLines', showLabel: false, checked: true, title: 'Перестроить линии'">
@@ -41,7 +41,7 @@
         </div>
 
         <div data-dojo-attach-point="undoAll"
-             data-dojo-attach-event="onClick: updateLines"
+             data-dojo-attach-event="onClick: undoAll"
              data-dojo-type="dijit/form/Button"
              data-dojo-props="iconClass: 'undoAll', showLabel: false, checked: true, title: 'Откатить весь объект строительства'">
         </div>
