--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/EditorToolbar.html
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/EditorToolbar.html
@@ -37,13 +37,13 @@
         <div data-dojo-attach-point="undoOne"
              data-dojo-attach-event="onClick: undoOne"
              data-dojo-type="dijit/form/Button"
-             data-dojo-props="iconClass: 'undoOne', showLabel: false, checked: true, title: 'Откатить выбранный объект'">
+             data-dojo-props="iconClass: 'undoOne', showLabel: false, checked: true, title: 'Отменить изменения выбранного объекта'">
         </div>
 
         <div data-dojo-attach-point="undoAll"
              data-dojo-attach-event="onClick: undoAll"
              data-dojo-type="dijit/form/Button"
-             data-dojo-props="iconClass: 'undoAll', showLabel: false, checked: true, title: 'Откатить весь объект строительства'">
+             data-dojo-props="iconClass: 'undoAll', showLabel: false, checked: true, title: 'Отменить изменения всех объектов'">
         </div>
     </div>
 </div>
