--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/AttributesEditorWrapper.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/AttributesEditorWrapper.mustache
@@ -1,6 +1,6 @@
 <div>
     <h3>Атрибуты объекта</h3>
-    <div class="invitation">Выделите любой объект на редактируемом слое, кликнув по нему.</div>
+    <div class="invitation">Для просмотра свойств объекта выделите его, кликнув по нему мышкой</div>
     <div class="wait">Загрузка атрибутов...</div>
     <div class="attributes"></div>
 </div>
