#370 removed unused properties

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/EditorToolbar.html
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/EditorToolbar.html
@@ -15,14 +15,14 @@
              id="undoOneButton"
              data-dojo-attach-event="onClick: undoAll"
              data-dojo-type="dijit/form/Button"
-             data-dojo-props="editorMode: 'undoOne', iconClass: 'undoOne', showLabel: false, checked: false, title: 'Отменить изменения выбранного объекта'">
+             data-dojo-props="iconClass: 'undoOne', showLabel: false, checked: false, title: 'Отменить изменения выбранного объекта'">
         </div>
 
         <div data-dojo-attach-point="removeFeatureButton"
              id="removeFeatureButton"
              data-dojo-attach-event="onClick: removeFeature"
              data-dojo-type="dijit/form/Button"
-             data-dojo-props="editorMode: 'removingFeature', iconClass: 'removeFeature', showLabel: false, checked: false, title: 'Удалить выбранный объект'">
+             data-dojo-props="iconClass: 'removeFeature', showLabel: false, checked: false, title: 'Удалить выбранный объект'">
         </div>
 
         <div data-dojo-type="dijit/ToolbarSeparator"></div>
