closed #375 button tooltip was renamed

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/EditorToolbar.html
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/EditorToolbar.html
@@ -50,7 +50,7 @@
         <div data-dojo-attach-point="updateLinesButton"
              data-dojo-attach-event="onClick: updateLines"
              data-dojo-type="dijit/form/Button"
-             data-dojo-props="iconClass: 'updateLines', showLabel: false, checked: true, title: 'Перестроить линии'">
+             data-dojo-props="iconClass: 'updateLines', showLabel: false, checked: true, title: 'Запустить автоматическое построение трассы кабеля'">
         </div>
     </div>
 </div>
