#376 tooltip label was renamed

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/EditorToolbar.html
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/EditorToolbar.html
@@ -14,7 +14,7 @@
         <div data-dojo-attach-point="createVolsButton"
              id="createVolsButton"
              data-dojo-type="dijit/form/ToggleButton"
-             data-dojo-props="editorMode: 'creatingVols', iconClass: 'iconCreateVols', showLabel: false, checked: false, title: 'Создать ВОЛС'">
+             data-dojo-props="editorMode: 'creatingVols', iconClass: 'iconCreateVols', showLabel: false, checked: false, title: 'Создать трассу кабеля'">
         </div>
 
         <div data-dojo-attach-point="createSpButton"
