#342 rendering construct object name for attributes editor was implemented

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/AttributesEditorWrapper.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/AttributesEditorWrapper.mustache
@@ -1,5 +1,5 @@
 <div>
-    <h3>Атрибуты объекта</h3>
+    <h3>{{resourceDisplayName}}</h3>
     <div class="invitation">Для просмотра свойств объекта выделите его, кликнув по нему мышкой</div>
     <div class="wait">Загрузка атрибутов...</div>
     <div class="attributes"></div>
