--- a/nextgisweb_compulink/compulink_site/static/css/icons.css
+++ b/nextgisweb_compulink/compulink_site/static/css/icons.css
@@ -48,3 +48,13 @@
     -o-background-size: cover; /* Opera*/
     background-size: cover; /* Generic*/
 }
+
+.iconPrintMap {
+    background: url('../img/print-map.png') no-repeat;
+    width: 16px;
+    height: 16px;
+    -webkit-background-size: cover; /* For WebKit*/
+    -moz-background-size: cover; /* Mozilla*/
+    -o-background-size: cover; /* Opera*/
+    background-size: cover; /* Generic*/
+}
