--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -127,13 +127,18 @@
 
                             <span style="color: #999">М</span>
                             <span data-dojo-attach-point="scaleInfoNode"></span>
-
                         </div>
 
+                        <div data-dojo-attach-point="printMapButton"
+                             data-dojo-attach-event="onClick: printMap"
+                             data-dojo-type="dijit/form/Button"
+                             data-dojo-props="iconClass: 'iconPrintMap', showLabel: false">
+                        </div>
 
+                        <div data-dojo-type="dijit/ToolbarSeparator"></div>
                     </div>
 
-                    <div data-dojo-attach-point="mapPane"
+                    <div id="mapPane" data-dojo-attach-point="mapPane"
                          data-dojo-type="dijit/layout/ContentPane"
                          data-dojo-props="region: 'center'"
                          style="width: 100%; padding: 0;">
