#344 undoOne functionality was implemented on client-side

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/EditorToolbar.html
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/editor/templates/EditorToolbar.html
@@ -34,7 +34,7 @@
 
         <div data-dojo-attach-point="undoOneButton"
              id="undoOneButton"
-             data-dojo-attach-event="onClick: undoAll"
+             data-dojo-attach-event="onClick: undoOne"
              data-dojo-type="dijit/form/Button"
              data-dojo-props="iconClass: 'undoOne', showLabel: false, checked: false, title: 'Отменить изменения выбранного объекта'">
         </div>
