--- a/nextgisweb_compulink/compulink_site/static/css/print.css
+++ b/nextgisweb_compulink/compulink_site/static/css/print.css
@@ -1,4 +1,5 @@
-body div.header-wrapper, #rightPanel, #leftPanel, div.dijitToolbar, div.dijitGutter {
+body div.header-wrapper, #rightPanel, #leftPanel, div.dijitToolbar,
+div.dijitGutter, #bottomPanel, div.dgrid-scroller {
     display: none !important;
 }
 
@@ -19,6 +20,9 @@ div[data-dojo-attach-point="mainPane"],
     position: relative !important;
     width: 100% !important;
     height: 100% !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    overflow: hidden !important;
 }
 
 #permalink,
@@ -35,4 +39,5 @@ div[data-dojo-attach-point="mapNode"] {
 div[data-dojo-attach-point="mapPane"] {
     position: relative !important;
     top: 0 !important;
+    overflow: hidden;
 }
