--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/css/PrintMap.css
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/css/PrintMap.css
@@ -10,13 +10,24 @@
     padding: 0;
 }
 
+#printMapDialog div.dijitDialogPaneContentArea {
+    text-align: center;
+}
+
+#printMapDialog div.dijitLayoutContainer.dijitContainer.dijitTableLayout {
+    display: inline-block;
+    width: 300px;
+    text-align: left;
+}
+
 #printMap {
     display: block;
     position: absolute;
     top: 177px;
-    left: 10px;
-    width: auto;
-    max-width: 98%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    max-width: 70%;
     bottom: 10px;
     z-index: 999;
     overflow: auto;
