#387 margin and max-width was fixed for print style

--- a/nextgisweb_compulink/compulink_site/static/css/print.css
+++ b/nextgisweb_compulink/compulink_site/static/css/print.css
@@ -10,6 +10,8 @@ body div.main-wrapper, div.dijitDialog, div.dijitPopup {
     left: 0 !important;
     bottom: 0 !important;
     right: 0 !important;
+    margin: 0 !important;
+    max-width: none !important;
 }
 
 /*body.claro, div.main-wrapper, div.body-wrapper,*/
