--- a/nextgisweb_compulink/compulink_statistic_map/amd/ngw-compulink-statistic-map/templates/Display.html
+++ b/nextgisweb_compulink/compulink_statistic_map/amd/ngw-compulink-statistic-map/templates/Display.html
@@ -126,6 +126,8 @@
                         <div data-dojo-type="dijit/ToolbarSeparator"></div>
                     </div>
 
+                    <div data-dojo-type="ngw-compulink-statistic-map/StatisticToolbar"></div>
+
                     <div id="mapPane" data-dojo-attach-point="mapPane"
                          data-dojo-type="dijit/layout/ContentPane"
                          data-dojo-props="region: 'center'"
