--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/tool/attachments/resource/DisplayWidget.css
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/tool/attachments/resource/DisplayWidget.css
@@ -1,22 +1,78 @@
-.ngw-feature-attachment-FotoDisplayWidget a.image {
+.ngw-feature-attachment-FotoDisplayWidget div.image {
     display: block; float: left;
-    width: 128px; height: 128px;
+    width: 128px;
+    height: 128px;
     margin-right: 2ex;
     margin-bottom: 2ex;
     text-align: center;
 }
 
-.ngw-feature-attachment-FotoDisplayWidget.compact a.image {
-    display: block; float: left;
-    width: 64px; height: 64px;
-    margin-right: 1ex;
-    margin-bottom: 1ex;
-    text-align: center;
+.ngw-feature-attachment-FotoDisplayWidget div.panel {
+    height: 5ex;
+    padding: 5px 5px 0 5px;
+    border-bottom: solid 1px #B5BCC7;
+    background-color: #E5F2FE;
 }
 
-.ngw-feature-attachment-FotoDisplayWidget a.image img {
-    position: relative; top: 50%;
-    transform: translateY(-50%);
+.ngw-feature-attachment-FotoDisplayWidget div.photo-content {
+    position: absolute;
+    height: auto;
+    right: 5px;
+    bottom: 5px;
+    left: 5px;
+    top: 6ex;
+    overflow: auto;
+}
+
+.ngw-feature-attachment-FotoDisplayWidget.compact div.image {
+    position: relative;
+    display: block;
+    float: left;
+    width: 64px;
+    height: auto;
+    margin: 3px 3px 0 3px;
+    text-align: center;
+    padding: 3px;
+    border: solid 1px #BBBBBB;
+}
+
+.ngw-feature-attachment-FotoDisplayWidget.compact div.image div.remove {
+    width: 16px;
+    height: 16px;
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-image: url("DisplayWidget/remove.png");
+    cursor: pointer;
+    opacity: 0.6;
+}
+
+.ngw-feature-attachment-FotoDisplayWidget.compact div.image div.remove:hover {
+    opacity: 1;
+}
+
+.ngw-feature-attachment-FotoDisplayWidget.compact div.image div.title {
+    width: 48px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    display: block;
+    position: relative;
+}
+
+.ngw-feature-attachment-FotoDisplayWidget.compact div.image div.imgWrapper {
+    width: 64px;
+    height: 64px;
+}
+
+.ngw-feature-attachment-FotoDisplayWidget div.image img {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    cursor: pointer;
+    display: block;
 }
 
 .ngw-feature-attachment-FotoDisplayWidget table { clear: both; width: 100%; margin-top: 1ex; }
@@ -28,7 +84,7 @@
 
 
 
-.ngw-feature-attachment-DocDisplayWidget a.image {
+.ngw-feature-attachment-DocDisplayWidget div.image {
     display: block; float: left;
     width: 128px; height: 128px;
     margin-right: 2ex;
@@ -36,7 +92,7 @@
     text-align: center;
 }
 
-.ngw-feature-attachment-DocDisplayWidget.compact a.image {
+.ngw-feature-attachment-DocDisplayWidget.compact div.image {
     display: block; float: left;
     width: 64px; height: 64px;
     margin-right: 1ex;
@@ -44,7 +100,7 @@
     text-align: center;
 }
 
-.ngw-feature-attachment-DocDisplayWidget a.image img {
+.ngw-feature-attachment-DocDisplayWidget div.image img {
     position: relative; top: 50%;
     transform: translateY(-50%);
 }
