Fix base layer selector

--- a/nextgisweb_compulink/compulink_statistic_map/amd/ngw-compulink-statistic-map/templates/Display.html
+++ b/nextgisweb_compulink/compulink_statistic_map/amd/ngw-compulink-statistic-map/templates/Display.html
@@ -118,6 +118,11 @@
                         </div>
 
                         <div data-dojo-type="dijit/ToolbarSeparator"></div>
+
+                        <div data-dojo-type="dijit/form/ComboButton"
+                             data-dojo-attach-point="basemapSelect">
+                             <div data-dojo-type="dijit/DropDownMenu"></div>
+                        </div>
                     </div>
 
                     <div data-dojo-type="ngw-compulink-statistic-map/StatisticToolbar"></div>
