--- a/nextgisweb_compulink/compulink_statistic_map/amd/ngw-compulink-statistic-map/templates/StatisticToolbar.html
+++ b/nextgisweb_compulink/compulink_statistic_map/amd/ngw-compulink-statistic-map/templates/StatisticToolbar.html
@@ -32,5 +32,7 @@
              data-dojo-props="iconClass: 'removeFeature', showLabel: false, checked: false, title: 'Удалить выбранный объект'">
         </div>
 
+        <!--<div>TODO: Combo button with tree of object</div>-->
+
     </div>
 </div>
