closed #407 BuildingObjectsSelect was added to toolbar

--- a/nextgisweb_compulink/compulink_statistic_map/amd/ngw-compulink-statistic-map/templates/StatisticToolbar.html
+++ b/nextgisweb_compulink/compulink_statistic_map/amd/ngw-compulink-statistic-map/templates/StatisticToolbar.html
@@ -32,7 +32,10 @@
              data-dojo-props="iconClass: 'removeFeature', showLabel: false, checked: false, title: 'Удалить выбранный объект'">
         </div>
 
-        <!--<div>TODO: Combo button with tree of object</div>-->
+        <div id="buildingObjectsSelect"
+             data-dojo-attach-point="buildingObjectsSelect"
+             data-dojo-props="url: '/compulink/reporting/resources/child'"
+             data-dojo-type="ngw-compulink-reporting/BuildingObjectsSelect"></div>
 
     </div>
 </div>
