--- a/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/resource/BuildingObjectsSelect.css
+++ b/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/resource/BuildingObjectsSelect.css
@@ -17,6 +17,7 @@ div.districts-select input {
     height: 15px;
     border-radius: 0;
     border: 1px #b5bcc7 solid;
+    padding: 1px 0 1px 2px;
 }
 
 div.districts-select:hover input {
@@ -28,7 +29,7 @@ div.districts-select div.dijitArrowButton {
     position: absolute;
     display: block;
     top: 0;
-    right: -2px;
+    right: -4px;
     width: 17px;
     height: 17px;
     border: 1px #b5bcc7 solid;
