closed #393 button was added

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/PrintMap.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/PrintMap.html
@@ -51,5 +51,10 @@
                 style="margin-left: 10px;">
             Печать
         </button>
+        <button data-dojo-type="dijit.form.Button"
+                data-dojo-attach-point="cancelButton"
+                style="margin-left: 10px;">
+            Отменить
+        </button>
     </div>
 </div>
