closed #392 menu item was added

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
@@ -27,6 +27,9 @@
                     <li>
                         <a title="Отчет по проекту УЦН" href="{{ headerData.reportUcnUrl }}">Отчет по проекту УЦН</a>
                     </li>
+                    <li>
+                        <a title="Статистика" href="{{ headerData.statisticMapUrl }}">Статистика</a>
+                    </li>
                 </ul>
             </li>
             <li>
