--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.mustache
@@ -1,7 +1,9 @@
 <div class="timeline">
     <div id="timelineWidget"></div>
     <div class="controls">
-        <i class="fa fa-play-circle fa-3x" aria-hidden="true"></i>
-        <i class="fa fa-stop-circle fa-3x" aria-hidden="true"></i>
+        <i class="fa fa-fast-backward fa-2x" aria-hidden="true"></i>
+        <i class="fa fa-play-circle fa-2x" aria-hidden="true"></i>
+        <i class="fa fa-stop-circle fa-2x" aria-hidden="true"></i>
+        <i class="fa fa-fast-forward fa-2x" aria-hidden="true"></i>
     </div>
 </div>
