--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.mustache
@@ -6,4 +6,10 @@
         <i class="fa fa-stop-circle fa-2x" aria-hidden="true"></i>
         <i class="fa fa-fast-forward fa-2x" aria-hidden="true"></i>
     </div>
+    <br/>
+    <div class="controls">
+        Скорость
+        <span id="countUnitSelector"></span>
+        <span id="unitsSelector"></span> в секунду
+    </div>
 </div>
