#422 timeline floating pane width was fixed

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.css
@@ -1,3 +1,11 @@
+div#timeline {
+    height: 175px !important;
+}
+
+div.dojoxFloatingPaneCanvas {
+    height: 154px !important;
+}
+
 div.timeline {
     width: 100%;
     height: 100%;
