--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Display.html
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Display.html
@@ -111,6 +111,12 @@
                         </div>
 
                         <div data-dojo-type="dijit/ToolbarSeparator"></div>
+
+                        <div data-dojo-type="dijit/form/ComboButton"
+                             data-dojo-attach-point="basemapSelect">
+                             <div data-dojo-type="dijit/DropDownMenu"></div>
+                        </div>
+
                     </div>
 
                     <div id="mapPane" data-dojo-attach-point="mapPane"
