#430 current time vertical bar color was changed to green

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.css
@@ -46,3 +46,7 @@ i.fa-fast-backward {
 i.fa-fast-forward {
     margin-left: 5px;
 }
+
+div#timeline div.vis-current-time {
+    background-color: green;
+}
